# taohash-proxy

./: .gitignore  README.md  __init__.py  pyproject.toml
config/: config.toml  config.toml.example  validator_access.toml.example
docker/: .env  .env.example  Dockerfile  Dockerfile.cron  clickhouse-storage.xml  crontab  docker-compose.yml  haproxy.cfg  nginx.conf  requirements.txt  test_proxy.sh
docs/: API.md  MONITORING.md  SETUP.md  test_proxy.sh
scripts/: daily_snapshot.py  generate_token.py  manual_snapshot.sh
src/: __main__.py  aggregator.py  main.py
src/api/: __init__.py  app.py  auth.py  models.py
src/api/services/: balance_queries.py  config_queries.py  earnings_queries.py  general_config_queries.py  payouts_queries.py  pool_queries.py  reward_queries.py  tides_queries.py  tides_rewards_queries.py  worker_queries.py
src/api/tasks/: startup.py
src/core/: __init__.py  job_queue.py  miner_session.py  miner_state.py  pool_session.py
src/difficulty_monitoring/: __init__.py  braiins_provider.py  monitor.py
src/difficulty_monitoring/bch/: cryptoapi_provider.py
src/monitoring/: __init__.py  analytics_api.py  dashboard.py  stats.py
src/protocol/: __init__.py  difficulty.py
src/rewards_extraction/: __init__.py  antpool.py  braiins.py  monitor.py  ocean.py
src/storage/: __init__.py  db.py
src/th_proxy/: __init__.py  main.py
src/th_proxy/api/: app.py
src/th_proxy/core/: __init__.py
src/th_proxy/monitoring/: __init__.py  analytics_api.py  dashboard.py
src/th_proxy/protocol/: README.md  __init__.py  difficulty.py
src/th_proxy/utils/: __init__.py  constants.py  logger.py
src/tides_monitoring/: __init__.py  monitor.py  ocean_rewards_monitor.py  rewards_monitor.py
src/tides_monitoring/bch/: rewards_monitor.py
src/tides_monitoring/btc/: ocean_rewards_monitor.py
src/utils/: __init__.py  constants.py  env.py  logger.py  time_normalize.py
static/: analytics.css  analytics.html  analytics.js  dashboard.js  index.html  styles.css
static/common/: taohash-design-system.css
tests/: test_share_diff.py
th_o3/: Cargo.toml  LICENSE  README.md  pyproject.toml
th_o3/src/: lib.rs
th_o3/src/protocol/: difficulty.rs  mod.rs  tides.rs
th_o3/th_o3/: __init__.py
th_o3/th_o3/protocol/difficulty/: difficulty.pyi
th_o3/th_o3/protocol/tides/: tides.pyi
